fixing code overflow in safari

--- a/_sass/common.scss
+++ b/_sass/common.scss
@@ -57,7 +57,6 @@ code {
     font-size: 92%;
     color: #bf616a;
     background-color: #f9f9f9;
-    word-break: break-word;
 }
 
 pre code {
